// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sheet should render all props with nodes 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        id=":r0:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box fit relative"
          >
            <div
              class="Flex rowGap0 columnGap0 flexGrow justifyBetween xsDirectionRow xsItemsCenter"
            >
              <div
                class="box flexGrow paddingX6 paddingY6 xsDisplayFlex"
              >
                <h1
                  class="Heading fontSize500 defaultText alignStart breakWord"
                >
                  Sheet title
                </h1>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-controls=":r0:"
                  aria-label="Dismiss"
                  class="parentButton"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog transparent focused"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="icon defaultIcon iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <nav />
          </div>
          <div
            class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
            style="height: 100%;"
          >
            <section />
          </div>
          <div
            class="box fit relative"
          >
            <div
              class="box paddingX6 paddingY6"
            >
              <footer />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render all props with render props 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        id=":r1:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box fit relative"
          >
            <div
              class="Flex rowGap0 columnGap0 flexGrow justifyBetween xsDirectionRow xsItemsCenter"
            >
              <div
                class="box flexGrow paddingX6 paddingY6 xsDisplayFlex"
              >
                <h1
                  class="Heading fontSize500 defaultText alignStart breakWord"
                >
                  Sheet title
                </h1>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-controls=":r1:"
                  aria-label="Dismiss"
                  class="parentButton"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog transparent focused"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="icon defaultIcon iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <button
              type="submit"
            />
          </div>
          <div
            class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
            style="height: 100%;"
          >
            <button
              type="submit"
            />
          </div>
          <div
            class="box fit relative"
          >
            <div
              class="box paddingX6 paddingY6"
            >
              <button
                type="submit"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation in 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        id=":r2:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-controls=":r2:"
                aria-label="Dismiss"
                class="parentButton"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog transparent focused"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon defaultIcon iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
            style="height: 100%;"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation out 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationOut"
        id=":r3:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-controls=":r3:"
                aria-label="Dismiss"
                class="parentButton"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog transparent focused"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon defaultIcon iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
            style="height: 100%;"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
